--- a/app/templates/components/head.html
+++ b/app/templates/components/head.html
@@ -25,7 +25,7 @@
     {% block extra_stylesheets %}{% endblock %}
 
     <meta name="format-detection" content="telephone=no">
-    <meta property="og:title" content="Notify.gov">
+    <meta property="og:title" content="Flexion Messaging">
     <meta property="og:description" content="Reach people where they are with a text message platform built just for government">
     <meta property="og:image" content="/static/images/notify-og-image.png">
     {# google #}
