--- a/app/templates/views/acceptable-use-policy.html
+++ b/app/templates/views/acceptable-use-policy.html
@@ -9,30 +9,30 @@
 <section class="usa-prose">
   <h1>{{page_title}}</h1>
   <p>Use of the application indicates agreement with this acceptable use policy.</p>
-  <p>Acceptable uses of Notify.gov for this trial period include:</p>
+  <p>Acceptable uses of Flexion Messaging for this trial period include:</p>
   <ul>
-    <li>Configuring test services and sending test SMS messages to learn and demonstrate how Notify.gov works.</li>
-    <li>Reviewing data provided by Notify.gov and configuring available settings.</li>
+    <li>Configuring test services and sending test SMS messages to learn and demonstrate how Flexion Messaging works.</li>
+    <li>Reviewing data provided by Flexion Messaging and configuring available settings.</li>
   </ul>
   <p>
-    In order to help us keep Notify.gov secure, we require that you use your account appropriately. When you use Notify.gov, you agree that you’ll respect these rules of behavior:
+    In order to help us keep Flexion Messaging secure, we require that you use your account appropriately. When you use Flexion Messaging, you agree that you’ll respect these rules of behavior:
   </p>
   <ul>
     <li>Conduct only authorized business on the system.</li>
-    <li>Maintain the confidentiality of your authentication credentials; a Notify.gov operator should never ask you to reveal them. We recommend using a password manager and strong credentials.</li>
-    <li>Log out when you no longer need session access. Never leave your computer unattended while logged into Notify.gov.</li>
-    <li>Report all security incidents or suspected incidents (such as improper or suspicious acts) related to Notify.gov systems and networks to Notify.gov support.</li>
+    <li>Maintain the confidentiality of your authentication credentials; a Flexion Messaging operator should never ask you to reveal them. We recommend using a password manager and strong credentials.</li>
+    <li>Log out when you no longer need session access. Never leave your computer unattended while logged into Flexion Messaging.</li>
+    <li>Report all security incidents or suspected incidents (such as improper or suspicious acts) related to Flexion Messaging systems and networks to Flexion Messaging support.</li>
     <li>Safeguard system resources against waste, loss, abuse, unauthorized use or disclosure, and misappropriation.</li>
     <li>Don’t process U.S. classified national security information on the system.</li>
-    <li>Don’t browse, search or reveal information hosted by Notify.gov except as required to perform your legitimate tasks or assigned duties.</li>
+    <li>Don’t browse, search or reveal information hosted by Flexion Messaging except as required to perform your legitimate tasks or assigned duties.</li>
     <li>Don’t retrieve information, or in any other way disclose information, for someone who does not have authority to access that information.</li>
     <li>Don’t intentionally use a client that makes use of obsolete or insecure encryption algorithms.</li>
-    <li>Don’t configure your browser to ignore security warnings which may involve your connection with Notify.gov; report warnings that you can’t explain to Notify.gov support.</li>
-    <li>If you believe you’ve been granted more access than necessary to perform your legitimate tasks or assigned duties, immediately notify Notify.gov support.</li>
+    <li>Don’t configure your browser to ignore security warnings which may involve your connection with Flexion Messaging; report warnings that you can’t explain to Flexion Messaging support.</li>
+    <li>If you believe you’ve been granted more access than necessary to perform your legitimate tasks or assigned duties, immediately notify Flexion Messaging support.</li>
     <li>Don’t share your account with another person or create anonymous or group accounts. Your account is just for you.</li>
   </ul>
-  <p>Access to systems and networks owned by Notify.gov is governed by, and subject to, all federal laws, including, but not limited to, the Privacy Act, 5 U.S.C. 552a, if the applicable Notify.gov system maintains individual Privacy Act information. Access to Notify.gov systems constitutes consent to the retrieval and disclosure of the information within the scope of your authorized access, subject to the Privacy Act, and applicable state and federal laws.</p>
-  <p>Please contact Notify.gov support if you have questions about these rules or don’t understand them.</p>
+  <p>Access to systems and networks owned by Flexion Messaging is governed by, and subject to, all federal laws, including, but not limited to, the Privacy Act, 5 U.S.C. 552a, if the applicable Flexion Messaging system maintains individual Privacy Act information. Access to Flexion Messaging systems constitutes consent to the retrieval and disclosure of the information within the scope of your authorized access, subject to the Privacy Act, and applicable state and federal laws.</p>
+  <p>Please contact Flexion Messaging support if you have questions about these rules or don’t understand them.</p>
 </section>
 
 {% endblock %}
