--- a/app/templates/views/about/about.html
+++ b/app/templates/views/about/about.html
@@ -8,8 +8,8 @@
 {% block content_column_content %}
 <section class="usa-prose">
   <h1>{{page_title}}</h1>
-  <p>Notify.gov is a text messaging service built by and for the government. We help agencies communicate more
-    effectively with the people they serve. With Notify.gov, federal and federally-funded programs can send customized
+  <p>Flexion Messaging is a text messaging service built by and for the government. We help agencies communicate more
+    effectively with the people they serve. With Flexion Messaging, federal and federally-funded programs can send customized
     text messages that make it possible to:</p>
   <ul>
     <li>Meet people where they are</li>
@@ -22,7 +22,7 @@
         aria-label="21st Century IDEA (opens in a new tab)">21st Century
         IDEA</a> and other directives</li>
   </ul>
-  <p>Notify.gov is an easy-to-use, web-based platform. It requires no technical expertise or system integration — users
+  <p>Flexion Messaging is an easy-to-use, web-based platform. It requires no technical expertise or system integration — users
     can create an account and get started within minutes. We take the security and privacy of messaging data seriously
     by minimizing data retention and using modern encryption methods.</p>
     <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/fkcy_xbo0Bw?si=qNo94BwL4WCeusy5&amp;start=2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen credentialless></iframe>  <h2 class="padding-bottom-3">Product Highlights</h2>
@@ -30,12 +30,12 @@
   {
   "svg_src": "#send",
   "card_heading": "Send customized one-way messages",
-  "p_text": "Upload a file with recipient phone numbers and Notify.gov sends customized messages",
+  "p_text": "Upload a file with recipient phone numbers and Flexion Messaging sends customized messages",
   },
   {
   "svg_src": "#translate",
   "card_heading": "Send in recipients’ preferred language",
-  "p_text": "Notify.gov supports more than 30 character sets to send messages in almost any language",
+  "p_text": "Flexion Messaging supports more than 30 character sets to send messages in almost any language",
   },
   {
   "svg_src": "#trending_up",
@@ -51,7 +51,7 @@
   {
   "svg_src": "#people",
   "card_heading": "Manage team member and permissions on each service",
-  "p_text": "Administrators can add users and control what they can do in Notify.gov",
+  "p_text": "Administrators can add users and control what they can do in Flexion Messaging",
   }
   ] %}
   <ul class="usa-icon-list">
@@ -69,7 +69,7 @@
     </li>
     {% endfor %}
   </ul>
-  <p>Notify.gov is a product of the <a href="/studio">Public Benefits Studio</a>, a product accelerator inside
+  <p>Flexion Messaging is a product of the <a href="/studio">Public Benefits Studio</a>, a product accelerator inside
     the federal government. </p>
 </section>
 {% endblock %}
