--- a/app/templates/views/about/why-text-messaging.html
+++ b/app/templates/views/about/why-text-messaging.html
@@ -48,7 +48,7 @@
   </p>
   <h2 id="what-texting-is-best-for">What texting is best for</h2>
   <p>
-    Agencies, like you, are already using Notify.gov to text about the following programs.
+    Agencies, like you, are already using Flexion Messaging to text about the following programs.
   </p>
   {% set card_contents = [
   {
