--- a/app/templates/views/guides/multiple-languages.html
+++ b/app/templates/views/guides/multiple-languages.html
@@ -20,8 +20,8 @@
   </p>
 
   <p>
-    To send translated messages using Notify.gov you will need two things: a record of your recipients’ preferred
-    language and translation/s of the message template. Notify.gov does not provide translation services.
+    To send translated messages using Flexion Messaging you will need two things: a record of your recipients’ preferred
+    language and translation/s of the message template. Flexion Messaging does not provide translation services.
   </p>
 
   <p>
