--- a/app/templates/views/join-notify.html
+++ b/app/templates/views/join-notify.html
@@ -8,26 +8,26 @@
 
 <section class="usa-prose">
   <h1>{{page_title}}</h1>
-  <h2>Who is Notify.gov for?</h2>
+  <h2>Who is Flexion Messaging for?</h2>
   <p>
-    Government agencies at any level of government who deliver <b>federal programs</b> are able to use Notify.gov. Those
-    who sign up to new Notify.gov become our partners.
+    Government agencies at any level of government who deliver <b>federal programs</b> are able to use Flexion Messaging. Those
+    who sign up to new Flexion Messaging become our partners.
   </p>
   <p>
-    All <b>federal agencies</b> are invited to use Notify.gov to send text messages to their employees, other federal
+    All <b>federal agencies</b> are invited to use Flexion Messaging to send text messages to their employees, other federal
     agencies, or to the public.
   </p>
   <p>
     <b>
       Non-federal agencies (state, local, territorial, or tribal governments) who administer or deliver federally-funded
       services
-    </b> may qualify to use Notify.gov. These programs must specify which federal program the messages they want to
-    send are related to. The Notify.gov team confirms our authority to work with these programs as part of our
+    </b> may qualify to use Flexion Messaging. These programs must specify which federal program the messages they want to
+    send are related to. The Flexion Messaging team confirms our authority to work with these programs as part of our
     agreements process.
   </p>
   <h3>What partners receive</h3>
   <p>
-    To use Notify.gov to send messages (outside of our Trial Mode), partners sign a one-year Memorandum of Understanding
+    To use Flexion Messaging to send messages (outside of our Trial Mode), partners sign a one-year Memorandum of Understanding
     with us. This is a basic agreement outlining our relationship and responsibilities.
   </p>
   <p class="padding-bottom-3"><b>Our core, no-cost, service offering includes:</b></p>
@@ -72,8 +72,8 @@
     aria-labelledby="summary-box-how-to-get-started">
     <div class="usa-summary-box__body">
       <div class="usa-summary-box__text">
-        <p class="margin-0">Interested in trying Notify.gov before signing an agreement? We can provide qualifying partners with access
-          to Trial Mode to review Notify.gov features before deciding. In Trial Mode, you can test sending messages,
+        <p class="margin-0">Interested in trying Flexion Messaging before signing an agreement? We can provide qualifying partners with access
+          to Trial Mode to review Flexion Messaging features before deciding. In Trial Mode, you can test sending messages,
           explore the personalization and customization features, and review sample delivery reports.</p>
       </div>
     </div>
@@ -81,7 +81,7 @@
 
   <h3 class="font-body-md">Tell us about your program</h3>
   <p class="padding-bottom-3">
-    Let’s determine if Notify.gov is a good fit for your organization. To <b>get started</b>, we’ll ask you for
+    Let’s determine if Flexion Messaging is a good fit for your organization. To <b>get started</b>, we’ll ask you for
     information such as:
   </p>
   {% set bullet_items = [
@@ -132,13 +132,13 @@
   },
   {
   "heading": "What phone numbers can my agency send to?",
-  "p_text": "Right now, Notify.gov supports sending messages to North American numbers (+1). If you’d like to send to
+  "p_text": "Right now, Flexion Messaging supports sending messages to North American numbers (+1). If you’d like to send to
   international numbers, we want to <a href='/contact'>hear from you</a>.",
   "position": "b-a2",
   },
   {
   "heading": "Can we send from a shortcode or an existing customer service number?",
-  "p_text": "At this time, Notify.gov provides toll-free service numbers. We will be exploring offering shortcodes in
+  "p_text": "At this time, Flexion Messaging provides toll-free service numbers. We will be exploring offering shortcodes in
   the near future. If you wish to send from an existing phone number owned or operated by your agency, this is something
   that might be possible in the future, but is not currently on our roadmap.",
   "position": "b-a3",
@@ -150,14 +150,14 @@
   "position": "b-a4",
   },
   {
-  "heading": "My IT team has questions about how Notify.gov is built, where can I direct them to more information?",
-  "p_text": "To understand how Notify.gov works, see our <a href='/about/security'>Security page </a> for the
+  "heading": "My IT team has questions about how Flexion Messaging is built, where can I direct them to more information?",
+  "p_text": "To understand how Flexion Messaging works, see our <a href='/about/security'>Security page </a> for the
   basics. If your IT team needs more
   information we’re happy to share a larger security package upon request.",
   "position": "b-a5",
   },
   {
-  "heading": "How does Notify.gov support our records retention policy?",
+  "heading": "How does Flexion Messaging support our records retention policy?",
   "p_text": "We are not a System of Record. For more see our <a href='/about/security'>Security page</a>.",
   "position": "b-a6",
   },
@@ -172,7 +172,7 @@
   },
   {
   "heading": "What information does Notify provide about message delivery?",
-  "p_text": "Notify.gov shares back information about message delivery that we receive from individual mobile phone
+  "p_text": "Flexion Messaging shares back information about message delivery that we receive from individual mobile phone
   carriers. Carriers can only provide information about whether a message was successfully delivered to a specific phone
   number (not a person).
 
@@ -183,14 +183,14 @@
   {
   "heading": "Can I track engagement with the messages I send?",
   "p_text": "Unlike email, you cannot see if someone reads a message or clicks on a link you included in a message. This
-  is a limitation of SMS in general, not Notify.gov. We do highly recommend setting goals for your texting campaigns and
-  tracking performance. By combining the delivery reports provided by Notify.gov with other information from your
+  is a limitation of SMS in general, not Flexion Messaging. We do highly recommend setting goals for your texting campaigns and
+  tracking performance. By combining the delivery reports provided by Flexion Messaging with other information from your
   program, you may be able to assess engagement and impact.",
   "position": "b-a9",
   },
   {
   "heading": "Is there technical product support offered?",
-  "p_text": "We’re on call to answer any questions as you get started using Notify.gov",
+  "p_text": "We’re on call to answer any questions as you get started using Flexion Messaging",
   "position": "b-a10",
   },
   ] %}
