--- a/app/templates/views/message-status.html
+++ b/app/templates/views/message-status.html
@@ -87,6 +87,6 @@
     <li>Any subsequent messages sent to that number will not be delivered (unless the recipient opts back in by texting “START”
     or “OPT-IN”).</li>
   </ul>
-  <p>Notify.gov does not yet have a way to pull opt-out status and make it available in the UI for agencies to download.</p>
+  <p>Flexion Messaging does not yet have a way to pull opt-out status and make it available in the UI for agencies to download.</p>
 
 {% endblock %}
