--- a/app/templates/views/organizations/organization/usage.html
+++ b/app/templates/views/organizations/organization/usage.html
@@ -89,7 +89,7 @@
   <div class="keyline-block"></div>
   {% if not services %}
     <p class="usa-body usa-hint">
-      {{ current_org.name }} has no live services on Notify.gov
+      {{ current_org.name }} has no live services on Flexion Messaging
     </p>
     <div class="keyline-block"></div>
   {% else %}
