--- a/app/templates/views/service-settings/set-email.html
+++ b/app/templates/views/service-settings/set-email.html
@@ -18,7 +18,7 @@
     <div class="grid-col-10">
       {{ page_header('Send emails') }}
       <p>
-        It’s free to send emails through Notify.gov.
+        It’s free to send emails through Flexion Messaging.
       </p>
       {% call form_wrapper() %}
         {{ form.enabled }}
