--- a/app/templates/views/signedout.html
+++ b/app/templates/views/signedout.html
@@ -2,10 +2,10 @@
 import usaButton %} {% block meta %}
 <meta
   name="description"
-  content="Notify.gov lets you send text messages to your users. Try it now if you work in federal, state, or local government."
+  content="Flexion Messaging lets you send text messages to your users. Try it now if you work in federal, state, or local government."
 />
 {% endblock %}
-{% block pageTitle %} Notify.gov
+{% block pageTitle %} Flexion Messaging
   {% if is_api_down %} - There's currently a technical issue {% endif %}
 {% endblock %}
 {% block main %}
@@ -21,7 +21,7 @@ import usaButton %} {% block meta %}
           <div class="grid-row">
             <div class="text-center grid-col-12 padding-y-4">
               <h1 class="font-sans-2xl usa-hero__heading margin-bottom-2">
-                Sunsetting Notify.gov
+                Sunsetting Flexion Messaging
               </h1>
               <p class="font-sans-lg margin-0">
                 This beta product is no longer in service as of June 9, 2025.
@@ -38,9 +38,9 @@ import usaButton %} {% block meta %}
                 Text messaging services
               </h2>
               <p class="usa-body">
-                Though the Notify.gov service is no longer available, government programs can continue to explore text messaging services.
+                Though the Flexion Messaging service is no longer available, government programs can continue to explore text messaging services.
               </p>
-              <p class="usa-body">Commercial messaging providers may support government use cases. For agencies with the resources to set up and support it, <a href="https://github.com/GSA/notifications-api" class="usa-link">the notifications service codebase</a> that runs Notify.gov is open source and can be reused.</p>
+              <p class="usa-body">Commercial messaging providers may support government use cases. For agencies with the resources to set up and support it, <a href="https://github.com/GSA/notifications-api" class="usa-link">the notifications service codebase</a> that runs Flexion Messaging is open source and can be reused.</p>
             </div>
             <div
               class="desktop:grid-col-3 grid-offset-1 desktop:display-block display-none margin-x-5"
@@ -63,7 +63,7 @@ import usaButton %} {% block meta %}
                 To our partners
               </h2>
               <p class="usa-body margin-0">
-                Thank you to our users and partners for their support, participation, and contributions in developing Notify.gov.
+                Thank you to our users and partners for their support, participation, and contributions in developing Flexion Messaging.
               </p>
             </div>
           </div>
