--- a/app/templates/views/studio.html
+++ b/app/templates/views/studio.html
@@ -23,7 +23,7 @@
     solutions that serve everyone else well, too.
   </p>
   <p class="margin-bottom-4">
-    <strong>The Studio’s first product offering is <a href="/">Notify.gov</a></strong>, a text message service that helps government agencies at all levels more effectively communicate with the people they serve.
+    <strong>The Studio’s first product offering is <a href="/">Flexion Messaging</a></strong>, a text message service that helps government agencies at all levels more effectively communicate with the people they serve.
   </p>
   <p class="font-body-lg">We’re currently exploring two new product spaces:</p>
   <ul>
@@ -35,7 +35,7 @@
   <ul>
     <li><a href="https://digital.gov/2023/02/07/collaborate-with-the-tts-public-benefits-studio/">Collaborate with the Public Benefits Studio</a> — Digital.gov, Feb 2023</li>
     <li><a href="https://federalnewsnetwork.com/it-modernization/2023/10/gsa-considers-text-messages-as-new-frontier-for-better-customer-experience/">GSA considers text messages as new frontier for better customer experience</a> — Federal News Network, Oct 2023</li>
-    <li><a href="https://www.gsa.gov/blog/2024/03/18/notifygov-is-helping-government-meet-families-where-they-are">Notify.gov is helping government meet families where they are</a> — GSA.gov blog, Mar 2024</li>
+    <li><a href="https://www.gsa.gov/blog/2024/03/18/notifygov-is-helping-government-meet-families-where-they-are">Flexion Messaging is helping government meet families where they are</a> — GSA.gov blog, Mar 2024</li>
   </ul>
 </section>
 
