--- a/app/templates/views/templates/action_blocked.html
+++ b/app/templates/views/templates/action_blocked.html
@@ -21,7 +21,7 @@
       </p>
       <p>
         If you need to send {{ 999|message_count_label(notification_type, suffix='') }}
-        <a class="usa-link" href="{{ url_for('.support') }}">get in touch with the Notify.gov team</a>.
+        <a class="usa-link" href="{{ url_for('.support') }}">get in touch with the Flexion Messaging team</a>.
       </p>
 
     </div>
