--- a/app/templates/views/about/security.html
+++ b/app/templates/views/about/security.html
@@ -12,7 +12,7 @@
 
 <section class="usa-prose">
   <h1>{{page_title}}</h1>
-  <p class="font-sans-lg text-base">Notify.gov is built for the needs of government agencies with fundamental system
+  <p class="font-sans-lg text-base">Flexion Messaging is built for the needs of government agencies with fundamental system
     security processes in place to:
   </p>
   <ul>
@@ -21,7 +21,7 @@
     <li>manage risks around information</li>
   </ul>
   <p>
-    Notify.gov operates under a full three-year <a class="use-link usa-link--external"
+    Flexion Messaging operates under a full three-year <a class="use-link usa-link--external"
       href="https://digital.gov/resources/an-introduction-to-ato/"
       target="_blank"
       rel="noopener noreferrer"
@@ -45,16 +45,16 @@
       AWS SNS </a> for sending SMS
     messages.
   </p>
-  <p>For more information about the Notify.gov infrastructure, contact us at <a
+  <p>For more information about the Flexion Messaging infrastructure, contact us at <a
       href="mailto:notify-support@gsa.gov">notify-support@gsa.gov</a>.</p>
   <h2>Data</h2>
   <p>
-    On Notify.gov, data is encrypted both in transit and at rest. To send a message, agencies upload a spreadsheet of
+    On Flexion Messaging, data is encrypted both in transit and at rest. To send a message, agencies upload a spreadsheet of
     phone numbers and other necessary data from their existing data management system.
   </p>
   <p>
-    Notify.gov is not a system of record, so it does not have a System of Records Notice (SORN). Agencies are
-    responsible for managing their data outside of Notify.gov.
+    Flexion Messaging is not a system of record, so it does not have a System of Records Notice (SORN). Agencies are
+    responsible for managing their data outside of Flexion Messaging.
   </p>
   <h3>Data retention</h3>
   <p>
@@ -63,7 +63,7 @@
   </p>
   <h2>Multi-Factor Authentication</h2>
   <p>
-    Notify.gov uses <a class="use-link usa-link--external"
+    Flexion Messaging uses <a class="use-link usa-link--external"
       href="https://login.gov/what-is-login/"
       rel="noopener noreferrer"
       target="_blank"
@@ -72,7 +72,7 @@
     passwords to protect your account.
   </p>
   <p>
-    To access Notify.gov, users will use a Login.gov account associated with their agency (.gov) email with one of the
+    To access Flexion Messaging, users will use a Login.gov account associated with their agency (.gov) email with one of the
     <a class="use-link usa-link--external"
       href="https://login.gov/help/get-started/authentication-methods/"
       rel="noopener noreferrer"
