--- a/app/templates/views/invite-user.html
+++ b/app/templates/views/invite-user.html
@@ -31,7 +31,7 @@
       ) }}
     {% endif %}
     <p>
-      Team members must be invited directly using their .gov email address, not from forwarded invitations. Invitation links to create a Notify.gov account are active for only 24 hours. Expired invitations can e re-sent from the Team members page.
+      Team members must be invited directly using their .gov email address, not from forwarded invitations. Invitation links to create a Flexion Messaging account are active for only 24 hours. Expired invitations can e re-sent from the Team members page.
     </p>
 
     {% include 'views/manage-users/permissions.html' %}
