--- a/app/templates/views/security.html
+++ b/app/templates/views/security.html
@@ -8,7 +8,7 @@
 {% block content_column_content %}
 
   <h1 class="font-body-2xl margin-bottom-3">Security</h1>
-  <p>Notify.gov is built for the needs of government services. It has processes in place to:</p>
+  <p>Flexion Messaging is built for the needs of government services. It has processes in place to:</p>
   <ul class="list list-bullet">
     <li>protect user data</li>
     <li>keep systems secure</li>
@@ -17,37 +17,37 @@
 
   <h2 id="infrastructure">Infrastructure</h2>
 
-  <p>Notify.gov is comprised of two applications both running on <a href="https://www.cloud.gov">cloud.gov</a>:</p>
+  <p>Flexion Messaging is comprised of two applications both running on <a href="https://www.cloud.gov">cloud.gov</a>:</p>
   <ul class="list">
     <li>Admin, a Flask website running on the python_buildpack which hosts agency user-facing UI</li>
     <li>API, a Flask application running on the python_buildpack hosting the Notify API</li>
   </ul>
 
-  <p>Notify.gov utilizes several cloud.gov-provided services through Amazon Web Services (AWS):</p>
+  <p>Flexion Messaging utilizes several cloud.gov-provided services through Amazon Web Services (AWS):</p>
   <ul class="list">
     <li>AWS S3 buckets for temporary file storage</li>
     <li>AWS Elasticache (Redis) for caching data and enqueueing background tasks</li>
     <li>AWS RDS (PostgreSQL) for system data storage</li>
   </ul>
 
-  <p>Notify.gov also provisions and uses two AWS services via a <a href="https://github.com/GSA/datagov-ssb">supplemental service broker</a>:</p>
+  <p>Flexion Messaging also provisions and uses two AWS services via a <a href="https://github.com/GSA/datagov-ssb">supplemental service broker</a>:</p>
   <ul class="list">
     <li><a href="https://aws.amazon.com/sns/">AWS SNS</a> for sending SMS messages</li>
     <li><a href="https://aws.amazon.com/ses/">AWS SES</a> for sending email messages (note: email function is currently unavailable to users for pilot)</li>
   </ul>
 
   <h2 id="current-security-review">Current security review</h2>
-  <p>Currently, Notify.gov operates under a GSA <a href="https://www.gsa.gov/system/files/Lightweight-Security-Authorization-Process-%28LATO%29%20%5BCIO-IT-Security-14-68-Rev-7%5D%2009-17-2021docx%20%281%29.pdf">Lightweight Authority to Operate (LATO)</a>. This federal security authorization
+  <p>Currently, Flexion Messaging operates under a GSA <a href="https://www.gsa.gov/system/files/Lightweight-Security-Authorization-Process-%28LATO%29%20%5BCIO-IT-Security-14-68-Rev-7%5D%2009-17-2021docx%20%281%29.pdf">Lightweight Authority to Operate (LATO)</a>. This federal security authorization
   process leverages security controls provided by National Institute of Standards and Technology (NIST). The process is
   focused on operational security from both a functional and assurance perspective.</p>
   <p>We are pursuing a full Authority to Operate (ATO)</p>
 
   <h2 id="data">Data</h2>
   <p>To send a message, agencies upload a spreadsheet of phone numbers and other necessary data from their existing data
-  management system. On Notify.gov, data is encrypted when it passes through the service and when it’s stored on the
+  management system. On Flexion Messaging, data is encrypted when it passes through the service and when it’s stored on the
   service.</p>
-  <p>Notify.gov is not a system of record and as a result does not have a SORN. Agencies are responsible for managing their
-  data outside of Notify.gov.</p>
+  <p>Flexion Messaging is not a system of record and as a result does not have a SORN. Agencies are responsible for managing their
+  data outside of Flexion Messaging.</p>
   <ul class="list">
     <li>Notify stores data within the cloud.gov-managed PostgreSQL database and <a href="https://cloud.gov/docs/services/s3/#encryption">S3 buckets</a>. The entire database is <a href="https://cloud.gov/docs/services/relational-database/#encryption">encrypted at
     the disk level</a>.</li>
@@ -81,7 +81,7 @@
   the service.</p>
 
   <h3>Multi-factor authentication (MFA)</h3>
-  <p>Notify.gov uses <a href="https://login.gov/">Login.gov</a> to authenticate users.</p>
+  <p>Flexion Messaging uses <a href="https://login.gov/">Login.gov</a> to authenticate users.</p>
   <ul class="list">
     <li>Your email address and password</li>
     <li>A code from an authenticator app or sent by Login.gov in the form of a text message</li>
