--- a/app/templates/views/service-settings/set-auth-type.html
+++ b/app/templates/views/service-settings/set-auth-type.html
@@ -18,7 +18,7 @@
       {{ page_header('Sign-in method') }}
       <p>Your username, password, and multi-factor authentication options are handled by Login.gov.</p>
       <p>To make changes, head to <a href="https://login.gov/">Login.gov</a> and sign-in with your credentials.</p>
-      <p>Any changes made to your Login.gov account will automatically be synced with Notify.gov.</p>
+      <p>Any changes made to your Login.gov account will automatically be synced with Flexion Messaging.</p>
     </div>
   </div>
 
