--- a/app/templates/views/signin.html
+++ b/app/templates/views/signin.html
@@ -28,7 +28,7 @@
       <a class="usa-link usa-button" href="{{ initial_signin_url }}">Sign in with Login.gov</a>
     {% else %}
       <h1 class="font-body-2xl margin-bottom-3">Sign in</h1>
-      <p>Access your Notify.gov account by signing in with Login.gov:</p>
+      <p>Access your Flexion Messaging account by signing in with Login.gov:</p>
       <a class="usa-link usa-button" href="{{ initial_signin_url }}">Sign in with Login.gov</a>
     {% endif %}
   </div>
