--- a/app/templates/views/trial-mode.html
+++ b/app/templates/views/trial-mode.html
@@ -7,7 +7,7 @@
 {% block content_column_content %}
 
   <h1 class="font-body-2xl margin-bottom-3">Trial mode</h1>
-  <p>When you add a new service it will start in trial mode. This lets you try out Notify.gov, with a few restrictions.</p>
+  <p>When you add a new service it will start in trial mode. This lets you try out Flexion Messaging, with a few restrictions.</p>
 
   <h2 class="font-body-lg">Limits while in trial mode</h2>
   <p>While your service is in trial mode you can only:</p>
