--- a/app/templates/views/user-profile.html
+++ b/app/templates/views/user-profile.html
@@ -69,6 +69,6 @@
   <h2>Sign-in method</h2>
   <p>Your username, password, and multi-factor authentication options are handled by Login.gov. </p>
   <p>To make changes, head to <a href="https://secure.login.gov/">Login.gov</a>
-  and sign-in with your credentials.  Any changes made to your Login.gov account will automatically be synced with Notify.gov.</p>
+  and sign-in with your credentials.  Any changes made to your Login.gov account will automatically be synced with Flexion Messaging.</p>
 
 {% endblock %}
