--- a/notifications_utils/jinja_templates/email_template.jinja2
+++ b/notifications_utils/jinja_templates/email_template.jinja2
@@ -58,7 +58,7 @@
                         text-decoration: none;
                         vertical-align:top;
                         display: inline-block;
-                          ">Notify.gov</span>
+                          ">Flexion Messaging</span>
                     </td>
                   </tr>
                 </table>
