--- a/app/templates/views/accessibility_statement.html
+++ b/app/templates/views/accessibility_statement.html
@@ -19,7 +19,7 @@
     ) }}
 
   <p>
-    This accessibility statement applies to the Notify.gov domain. For GSA's accessibility statement, visit <a href="https://www.gsa.gov/website-information/accessibility-statement">https://www.gsa.gov/website-information/accessibility-statement</a>.
+    This accessibility statement applies to the Flexion Messaging domain. For GSA's accessibility statement, visit <a href="https://www.gsa.gov/website-information/accessibility-statement">https://www.gsa.gov/website-information/accessibility-statement</a>.
   </p>
 
   <p>
@@ -66,7 +66,7 @@
   <h2 class="font-body-lg" id="feedback-and-contact-information">Feedback and contact information</h2>
 
   <p>
-    If you need any part of this service in a different format like large print, audio recording or braille, <a class="usa-link" href="{{ url_for('main.support') }}">contact the Notify.gov team</a>.
+    If you need any part of this service in a different format like large print, audio recording or braille, <a class="usa-link" href="{{ url_for('main.support') }}">contact the Flexion Messaging team</a>.
   </p>
 
   <p>
@@ -76,7 +76,7 @@
   <h2 class="font-body-lg" id="reporting-accessibility-problems">Reporting accessibility problems with this website</h2>
 
   <p>
-    We’re always looking to improve the accessibility of this website. If you find any problems not listed on this page or think we’re not meeting accessibility requirements, <a class="usa-link" href="{{ url_for('main.support') }}">contact the Notify.gov team</a>.
+    We’re always looking to improve the accessibility of this website. If you find any problems not listed on this page or think we’re not meeting accessibility requirements, <a class="usa-link" href="{{ url_for('main.support') }}">contact the Flexion Messaging team</a>.
   </p>
 
   <h2 class="font-body-lg" id="technical-information">Technical information about this website’s accessibility</h2>
@@ -88,7 +88,7 @@
   </p>
 
   <p>
-    Notify.gov is partially compliant with the Web Content Accessibility Guidelines (WCAG) version 2.1 AA standard, due to the non-compliances listed below.
+    Flexion Messaging is partially compliant with the Web Content Accessibility Guidelines (WCAG) version 2.1 AA standard, due to the non-compliances listed below.
   </p>
 
   <h2 class="font-body-lg" id="non-accessible-content">Non-accessible content</h2>
@@ -195,6 +195,6 @@
   </p>
 
   <p>
-    We decided which pages to test based on the most common tasks that Notify.gov users need to complete. We also tested a sample of pages with common user interface components.
+    We decided which pages to test based on the most common tasks that Flexion Messaging users need to complete. We also tested a sample of pages with common user interface components.
   </p> -->
 {% endblock %}
