--- a/app/templates/views/contact.html
+++ b/app/templates/views/contact.html
@@ -9,7 +9,7 @@
   <h1>{{page_title}}</h1>
   <p>For any questions, contact us at <a href="mailto:tts-notify@gsa.gov"
       aria-label="contact us at tts-notify@gsa.gov">tts-notify@gsa.gov</a>.</p>
-  <p>If you are a current Notify.gov partner and have technical issues or questions, we are available
+  <p>If you are a current Flexion Messaging partner and have technical issues or questions, we are available
     at <a href="mailto:notify-support@gsa.gov"
       aria-label="Email Notify for technical questions at notify-support@gsa.gov">notify-support@gsa.gov</a></p>
 </section>
