--- a/app/templates/views/features.html
+++ b/app/templates/views/features.html
@@ -10,7 +10,7 @@
 {% block content_column_content %}
 
 <h1 class="font-body-2xl">Features</h1>
-<p class="usa-body">If you work for the government, you can use Notify.gov to keep your users updated.</p>
+<p class="usa-body">If you work for the government, you can use Flexion Messaging to keep your users updated.</p>
 <p class="usa-body">Notify makes it easy to create, customize, and send text messages</a>.</p>
 
 <p class="usa-body">You do not need any technical knowledge to use Notify.</p>
